<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tax Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pricestring">Price</string>
    <string name="taxString">Tax %</string>
    <string name="totalString">Total</string>
    <string name="calculate">Calculate</string>
    <string name="clearstring">Clear</string>

</resources>
